bug fixed + support added for inpu, z-index fixed

--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -4,12 +4,11 @@
 .chat-gpt-container {
   flex-basis: 0;
   flex-grow: 1;
-  z-index: 100;
-  width: 0px;
-
+  width: 0;
+  height: 0;
   .icon-container {
     cursor: pointer;
-    z-index: 0;
+    z-index: 9991;
     img {
       border: 1px solid rgb(13, 17, 23);
       border-radius: 20px;
@@ -27,6 +26,7 @@
     border: 1px solid rgb(13, 17, 23);
     border-radius: 12px;
     margin-top: 10px;
+    z-index: 9992;
   }
 
   &.sidebar-free {
